<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Tweets</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline"/>
    <string name="title_activity_tweetdetail"/>
    <string name="cancel">Cancel</string>
    <string name="compose">Compose</string>
    <string name="char_count">140</string>
    <string name="btn_tweet">Tweet</string>
    <string name="rel_time">8m</string>
    <string name="twitter">Twitter</string>
    <string name="tweet">Tweet</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hint_compose">Tweet Me!!!</string>
    <string name="screen_name">Screen Name</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="tagline">Tagline</string>
    <string name="followers">FOLLOWERS</string>
    <string name="following">FOLLOWING</string>
    <string name="title_following">Following</string>
    <string name="title_followers">Followers</string>
    <string name="no_internet">Unable to connect to twitter.com</string>
    <string name="loading">Loading...</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Twitter</string>
    <string name="message">Messages</string>
    <string name="message_hint">Type your Message!</string>
    <string name="name_hint">Name</string>
    <string name="send">Send</string>
    <string name="unable_to_complete_request">Unable to complete your request!!!</string>


</resources>