<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    tools:ignore="MissingPrefix"
    android:background="@android:color/white"
    >

    <ImageButton
        android:id="@+id/ibCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_action_close"
        />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:hint="@string/name_hint"
        style="@style/EditTextStyle"
        />

    <EditText
        android:id="@+id/etMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etName"
        android:ems="10"
        android:hint="@string/message_hint"
        android:inputType="textMultiLine"
        android:layout_alignRight="@+id/etName"
        android:layout_alignEnd="@+id/etName"
        android:minLines="5"
        android:gravity="top"
        android:layout_marginTop="10dp"
        style="@style/EditTextStyle"
        />

    <Button
        android:id="@+id/btnSend"
        style="@style/TwitterButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etMessage"
        android:layout_marginTop="10dp"
        android:text="@string/send"
        />
</RelativeLayout>
