<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    tools:ignore="MissingPrefix"
    >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:id="@+id/relativeLayout1">

        <com.makeramen.roundedimageview.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:maxHeight="50dp"
            android:id="@+id/ivProfileImage"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:adjustViewBounds="true"
            app:riv_corner_radius="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:id="@+id/tvName"
            android:layout_alignTop="@+id/ivProfileImage"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:layout_toEndOf="@+id/ivProfileImage"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            style="@style/BoldNameStyle"
            android:paddingLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Screen Name"
            android:id="@+id/tvScreenName"
            android:layout_below="@+id/tvName"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:layout_toEndOf="@+id/ivProfileImage"
            android:paddingLeft="10dp"
            style="@style/ScreenNameStyle"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ibCancel"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_action_close"
            android:background="@android:color/transparent"
            />


    </RelativeLayout>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etTweet"
        android:layout_below="@+id/relativeLayout1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_compose"
        android:lines="5"
        android:gravity="start"
        style="@style/EditTextStyle"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/char_count"
        android:id="@+id/tvCharCount"
        android:layout_below="@+id/etTweet"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:textSize="14sp"
        fontPath="fonts/Roboto-Regular.ttf"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/tweet"
        android:id="@+id/btnTweet"
        android:layout_below="@+id/tvCharCount"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="@style/TwitterButton"
        />

</RelativeLayout>
